[package]
name = "dbftopq"
version = "0.2.0"
authors = ["Raphael Campestrini <rca@seca.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dbftopq"
path = "src/lib.rs"

[[bin]]
name = "dbftopq"
path = "src/bin.rs"

[dependencies]
packed_struct = "0.6"
encoding_rs = "0.8.28"
oem_cp = "1.1.0"
chrono = "0.4.19"
parquet = "11.0.0"
clap = "2.33.3"
thiserror = "1.0"

[profile.optimized]
inherits = "release"
lto = "fat"
codegen-units = 1